# mail-to-misskey

./: LICENSE  README.md  getmail.py  pyproject.toml
modules/: settings.py
modules/files/: .env.sample
